test/sc++/error/lhs-rhs.scpp
../../scc/error/lhs-rhs.sc